import { Row } from '../Elements/Row';

export class Adress {  
    country?: Row;
    district?: Row;
    city?: Row;
    index?: Row;
    street?: Row;
    house?: Row;
    building?: Row;
    appartment?: Row;
 }