import { Row } from '../Elements/Row';
import { Adress } from './Adress';

export class CompanyDetails {
    fullname?:Row
    legalAdress?:Adress
    postalAdress?:Adress
    inn?:Row
    kpp?:Row
    bic?:Row
    paymentAccount?:Row
    corrAccount?:Row
    OKPO?:Row
    OKATO?:Row
    OKVED?:Row
    OGRN?:Row
    CEO?:Row
  }